recursion.logo.koch.Koch.scala.error
Erreur de compilation :
Koch:20: error: not enough arguments for method snowSide: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
     snowSide(levels-1);
             ^Koch:23: error: not enough arguments for method snowSide: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
    snowSide(levels-1);
            ^Koch:26: error: not enough arguments for method snowSide: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
    snowSide(levels-1);
            ^Koch:29: error: not enough arguments for method snowSide: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
    snowSide(levels-1);
            ^